--- a/app/index.pug
+++ b/app/index.pug
@@ -6,6 +6,30 @@ html(lang="en")
     title Document
     link(rel="stylesheet", href="css/style.min.css")
   body
+    header
+      .container
+        .header__content
+          img(src="img/Logo.webp", alt="Logo").logo
+          nav.main-nav
+            ul.main-nav__list
+              li
+                a(href="#") News
+              li
+                a(href="#") Events
+              li
+                a(href="#") My classes
+              li
+                a(href="#") My cases
+              li
+                a(href="#") My finances
+              li
+                a(href="#") My to-do list
+              li
+                a(href="#") My appointments
+              li
+                a(href="#") My documents
+          img(src="img/power.webp", alt="Notifications").notifications-icon
+          img(src="img/Account.webp", alt="Avatar").avatar
     
 
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
