--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,9 +3,23 @@
 @import "fonts";
 
 $black: #131313;
+$white: #fff;
+$red: #d50005;
+$grey: #7a7a7a;
+$borderColor: #d0d0d0;
 
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+}
+
+h2 {
+  margin: 0;
 }
 
 body {
@@ -21,8 +35,37 @@ body {
   margin: 0 auto;
 }
 
+.alert {
+  height: 50px;
+  background: #fff7a8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 21px;
+  letter-spacing: 0.05em;
+  .alert__text {
+    color: $black;
+  }
+  .alert__link {
+    color: $red;
+    margin-left: 20px;
+  }
+  .close {
+    position: absolute;
+    right: 42px;
+    cursor: pointer;
+  }
+}
+.alert.closed {
+  display: none;
+}
 header {
-  max-height: 80px;
+  height: 80px;
+  display: flex;
+  align-items: center;
   .header__content {
     display: flex;
     align-items: center;
@@ -38,7 +81,6 @@ header {
         li {
           position: relative;
           & > a {
-            text-decoration: none;
             color: $black;
             text-transform: uppercase;
             letter-spacing: 0.05em;
@@ -60,12 +102,353 @@ header {
         }
       }
     }
-    .notifications-icon {
+    .notifications {
       margin-left: 38px;
+      cursor: pointer;
+      position: relative;
+      .notifications-icon {
+
+      }
+      .notifications__content {
+        display: none;
+        position: absolute;
+      }
+      &:hover .notifications__content {
+        display: block;
+      }
     }
     .avatar {
       margin-left: 30px;
+      cursor: pointer;
     }
+  }
+}
+
+.search-wrapper {
+  background-image: url(../img/students.webp);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 700px;
+  padding-top: 258px;
+  .search-wrapper__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    .search__title {
+      font-weight: bold;
+      font-size: 48px;
+      line-height: 63px;
+      color: $white;
+      text-shadow: 0px 4px 40px rgba(68, 68, 68, 0.5);
+      margin-bottom: 30px;
+    }
+    .search {
+      position: relative;
+      width: 100%;
+      max-width: 600px;
+      .search__input {
+        border: 2px solid $white;
+        border-radius: 15px;
+        width: 100%;
+        height: 50px;
+        background-color: transparent;
+        padding: 5px 50px;
+        color: $white;
+        font-family: Whitney;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 18px;
+        &:focus {
+          background-color: rgba(22, 21, 21, 0.5);
+          outline: none;
+        }
+      }
+      .search-icon {
+        background-image: url(../img/zoom.svg);
+        width: 26px;
+        height: 26px;
+        position: absolute;
+        top: 50%;
+        left: 12px;
+        transform: translate(0, -50%);
+      }
+    }
+  }
+}
+
+.navigation-btns {
+  min-width: 500px;
+  background: $red;
+  padding: 100px 0;
+  .nav-by-btns {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 100px;
+    row-gap: 60px;
+    .tile {
+      border: 2px solid $white;
+      box-shadow: 0px 15px 50px rgba(152, 152, 152, 0.1);
+      border-radius: 20px;
+      height: 120px;
+      width: 320px;
+      display: flex;
+      align-items: center;
+      padding: 44px 0 45px 28px;
+      color: $white;
+      font-weight: 600;
+      font-size: 24px;
+      line-height: 31px;
+      letter-spacing: 0.03em;
+      position: relative;
+      &::after {
+        content: "";
+        width: 36px;
+        height: 36px;
+        border: 2px solid $white;
+        border-radius: 50%;
+        position: absolute;
+        right: 38px;
+      }
+      &::before {
+        content: "";
+        width: 12px;
+        height: 12px;
+        position: absolute;
+        right: 52px;
+        transform: rotate(45deg);
+        border: 2px solid;
+        border-color: $white $white transparent transparent;
+      }
+      &:hover {
+        background-color: $white;
+        color: $red;
+        &::after {
+          border-color: $red;
+        }
+        &::before {
+          border-color: $red $red transparent transparent;
+        }
+      }
+    }
+  }
+}
+
+.events {
+  padding: 120px 0;
+  .slider {
+    margin-top: 40px;
+    margin-left: 197px;
+    .slider__item {
+      min-width: 290px;
+      .event-card {
+        border: 1px solid $borderColor;
+        border-radius: 15px;
+        height: 320px;
+        max-width: 290px;
+        width: 100%;
+        padding: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .event-card__text {
+          max-height: 187px;
+          overflow: hidden;
+          .event-card__title {
+            font-weight: bold;
+            font-size: 24px;
+            line-height: 31px;
+            letter-spacing: 0.05em;
+            color: $black;
+          }
+          .event-card__subtitle {
+            font-weight: 300;
+            font-size: 18px;
+            line-height: 23px;
+            color: $grey;
+            margin-top: 10px;
+          }
+        }
+        .note {
+          border-top: 1px solid $borderColor;
+          padding-top: 20px;
+          .note__date {
+            font-weight: bold;
+            font-size: 16px;
+            line-height: 21px;
+            letter-spacing: 0.05em;
+            color: $black;
+          }
+          .note__time {
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 21px;
+            color: $black;
+            margin-top: 10px;
+          }
+          .place {
+            margin-left: 30px;
+            &::before {
+              content: "";
+              position: absolute;
+              width: 2px;
+              height: 2px;
+              background-color: $black;
+              border-radius: 50%;
+              top: 50%;
+              transform: translate(-50%, -50%);
+              left: -15px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.news {
+  padding-bottom: 120px;
+  .news__content {
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 30px;
+    .news__item {
+      max-width: 367px;
+      cursor: pointer;
+      img {
+        height: 240px;
+      }
+      .news__title {
+        font-weight: 300;
+        font-size: 16px;
+        line-height: 21px;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+        color: $red;
+        margin-top: 30px;
+      }
+      .news__text {
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 31px;
+        letter-spacing: 0.05em;
+        color: $black;
+        margin-top: 10px;
+      }
+      .news__date {
+        font-weight: 325;
+        font-size: 16px;
+        line-height: 21px;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+        color: $grey;
+        margin-top: 20px;
+      }
+    }
+  }
+  .more-link {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 24px;
+    letter-spacing: 0.05em;
+    color: $red;
+    margin-top: 80px;
+    display: block;
+  }
+}
+
+.footer {
+  background: #f3f3f3;
+  padding: 30px 0;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 24px;
+  color: $grey;
+  .footer__top {
+    padding-bottom: 30px;
+    .container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .logo {
+      align-self: flex-start;
+    }
+    .address {
+      // max-width: 341px;
+    }
+  }
+  .footer__bot {
+    border-top: 1px solid $borderColor;
+    .container {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 33px;
+    }
+    .copyright {
+      line-height: 21px;
+    }
+    .socials {
+      display: flex;
+      gap: 28px;
+      .socials__item {
+        line-height: 21px;
+        letter-spacing: 0.03em;
+      }
+    }
+  }
+}
+
+.title-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  h2 {
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 47px;
+    letter-spacing: 0.03em;
+    color: $red;
+  }
+  a {
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 23px;
+    color: $grey;
+    margin-bottom: 5px;
+    margin-right: 1px;
+  }
+}
+
+// Slider
+
+.slider {
+  .slick-arrow {
+    position: absolute;
+    top: calc(50% + 1px);
+    font-size: 0;
+    cursor: pointer;
+    width: 50px;
+    height: 16px;
+    border: none;
+    background-color: transparent;
+    background: url(../img/long-arrow.svg) 0 0 / 100% no-repeat;
+    outline: none;
+  }
+  .slick-arrow.slick-prev {
+    left: -197px;
+    transform: rotate(180deg);
+  }
+  .slick-arrow.slick-next {
+    left: -125px;
+  }
+  .slick-slide {
+    min-width: 290px;
+  }
+  .slick-slide + .slick-slide {
+    margin-left: 46px;
   }
 }
 
