--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,12 +1,7 @@
 @import "vars";
 @import "libs";
 @import "fonts";
-
-$black: #131313;
-$white: #fff;
-$red: #d50005;
-$grey: #7a7a7a;
-$borderColor: #d0d0d0;
+@import "to-do";
 
 *,
 *::after,
@@ -22,6 +17,12 @@ h2 {
   margin: 0;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   max-width: 1920px;
   font-family: Whitney;
@@ -31,8 +32,9 @@ body {
   line-height: 18px;
 }
 .container {
-  max-width: 1160px;
+  max-width: 1200px;
   margin: 0 auto;
+  padding: 0 20px;
 }
 
 .alert {
@@ -75,9 +77,7 @@ header {
     .main-nav {
       margin-left: 37px;
       .main-nav__list {
-        list-style: none;
         display: flex;
-        padding: 0;
         li {
           position: relative;
           & > a {
@@ -106,20 +106,223 @@ header {
       margin-left: 38px;
       cursor: pointer;
       position: relative;
+      .notifications__nums {
+        display: none;
+      }
+      .notifications__nums.counter {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: $red;
+        border: 1px solid $white;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 16px;
+        color: $white;
+        top: 1px;
+        right: -10px;
+      }
       .notifications-icon {
-
       }
       .notifications__content {
-        display: none;
+        display: flex;
+        flex-direction: column;
         position: absolute;
+        background: $white;
+        border: 1px solid $borderColor;
+        box-sizing: border-box;
+        border-radius: 15px;
+        width: 300px;
+        min-height: 100px;
+        right: -28px;
+        top: 57px;
+        transition: 0.4s;
+        visibility: hidden;
+        opacity: 0;
+        z-index: 5;
+        &::after {
+          content: "";
+          position: absolute;
+          width: 12px;
+          height: 12px;
+          border: 1px solid;
+          top: 0;
+          right: 31px;
+          transform: translate(0, -50%) rotate(45deg);
+          border-color: $borderColor transparent transparent $borderColor;
+          background: $white;
+        }
+        .notifications__empty {
+          display: none;
+          font-weight: 300;
+          font-size: 16px;
+          line-height: 21px;
+          letter-spacing: 0.02em;
+          color: $grey;
+        }
+        .notifications__header {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          font-weight: 300;
+          font-size: 14px;
+          line-height: 18px;
+          padding: 20px;
+          border-bottom: 1px solid $borderColor;
+          .notifications__title {
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            color: $grey;
+          }
+          .notifications__number {
+            color: $grey;
+          }
+        }
+        .notifications__list {
+          padding-bottom: 10px;
+          li {
+            display: flex;
+            position: relative;
+            &::after {
+              content: "";
+              background: url(../img/arrow-right.svg) center no-repeat;
+              width: 24px;
+              height: 100%;
+              position: absolute;
+              right: 18px;
+              pointer-events: none;
+            }
+            a {
+              font-weight: 600;
+              font-size: 14px;
+              line-height: 18px;
+              color: $black;
+              position: relative;
+              display: flex;
+              width: 100%;
+              padding: 20px 20px 20px 40px;
+              &::before {
+                content: "";
+                width: 10px;
+                height: 10px;
+                background: $red;
+                position: absolute;
+                border-radius: 50%;
+                top: 50%;
+                transform: translate(-20px, -50%);
+                pointer-events: none;
+              }
+            }
+            a.expired {
+              &::before {
+                background: $black;
+              }
+            }
+          }
+          li:not(:last-child) {
+            border-bottom: 1px solid #ededed;
+          }
+          img {
+            color: turquoise;
+          }
+        }
+        
       }
       &:hover .notifications__content {
-        display: block;
+        opacity: 1;
+        visibility: visible;
+      }
+      .notifications__content.empty {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        * {
+          display: none;
+        }
+        .notifications__empty {
+          display: flex;
+        }
       }
     }
-    .avatar {
-      margin-left: 30px;
-      cursor: pointer;
+    .profile {
+      position: relative;
+      .avatar {
+        margin-left: 30px;
+        cursor: pointer;
+      }
+      .profile__content {
+        position: absolute;
+        opacity: 0;
+        display: flex;
+        flex-direction: column;
+        background: $white;
+        border: 1px solid $borderColor;
+        box-sizing: border-box;
+        border-radius: 15px;
+        width: 180px;
+        min-height: 170px;
+        padding: 20px;
+        font-weight: 300;
+        font-size: 14px;
+        line-height: 18px;
+        color: $grey;
+        gap: 10px;
+        right: -20px;
+        top: 57px;
+        transition: 0.4s;
+        visibility: hidden;
+        z-index: 5;
+        &::after {
+          content: "";
+          position: absolute;
+          width: 12px;
+          height: 12px;
+          border: 1px solid;
+          top: 0;
+          right: 31px;
+          transform: translate(0, -50%) rotate(45deg);
+          border-color: $borderColor transparent transparent $borderColor;
+          background: $white;
+        }
+        .profile__item {
+          &:hover {
+            color: $black;
+            cursor: pointer;
+          }
+        }
+      }
+      &:hover .profile__content {
+        opacity: 1;
+        visibility: visible;
+      }
+    }
+    // Burger menu
+    .burger-menu {
+      #burger-menu__toggle {
+        opacity: 0;
+      }
+      #burger-menu__toggle:checked ~ .burger-menu__btn > span {
+        transform: rotate(45deg);
+      }
+      #burger-menu__toggle:checked ~ .burger-menu__btn > span::before {
+        top: 0;
+        transform: rotate(0);
+      }
+      #burger-menu__toggle:checked ~ .burger-menu__btn > span::after {
+        top: 0;
+        transform: rotate(90deg);
+      }
+      #burger-menu__toggle:checked ~ .main-nav {
+        visibility: visible;
+        left: 0;
+      }
+      .main-nav {
+        visibility: hidden;
+      }
     }
   }
 }
@@ -348,15 +551,16 @@ header {
       }
     }
   }
-  .more-link {
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: 0.05em;
-    color: $red;
-    margin-top: 80px;
-    display: block;
-  }
+}
+
+.more-link {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0.05em;
+  color: $red;
+  margin-top: 80px;
+  display: block;
 }
 
 .footer {
@@ -449,6 +653,116 @@ header {
   }
   .slick-slide + .slick-slide {
     margin-left: 46px;
+  }
+}
+
+// Popup
+
+.mfp-zoom-in {
+  /* start state */
+  .mfp-with-anim {
+    opacity: 0;
+    transition: all 0.2s ease-in-out;
+    transform: scale(0.8);
+  }
+
+  &.mfp-bg {
+    opacity: 0;
+    transition: all 0.3s ease-out;
+  }
+
+  /* animate in */
+  &.mfp-ready {
+    .mfp-with-anim {
+      opacity: 1;
+      transform: scale(1);
+    }
+    &.mfp-bg {
+      opacity: 0.8;
+    }
+  }
+
+  /* animate out */
+  &.mfp-removing {
+    .mfp-with-anim {
+      transform: scale(0.8);
+      opacity: 0;
+    }
+    &.mfp-bg {
+      opacity: 0;
+    }
+  }
+}
+
+.white-popup {
+  position: relative;
+  background: #fff;
+  padding: 30px 30px 40px 30px;
+  max-width: 600px;
+  width: 100%;
+  min-height: 224px;
+  margin: 0 auto;
+  border-radius: 15px;
+  &::after {
+    content: "";
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background: url(../img/popup-close.svg) center no-repeat;
+    top: -30px;
+    right: 0;
+    pointer-events: none;
+    background-color: #fff;
+    border-radius: 50%;
+  }
+}
+
+.popup-type {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 24px;
+  color: $red;
+  position: relative;
+  margin-left: 20px;
+  &::before {
+    content: "";
+    background: url(../img/power-red.svg) center no-repeat;
+    width: 10px;
+    height: 19px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-20px, -50%);
+  }
+}
+
+.popup-title {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 31px;
+  letter-spacing: 0.03em;
+  color: $black;
+  margin-top: 10px;
+}
+.popup-text {
+  font-weight: 350;
+  font-size: 16px;
+  line-height: 24px;
+  color: $grey;
+  margin-top: 10px;
+  p {
+    margin: 0;
+  }
+}
+
+.mfp-close {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: -30px;
+  opacity: 0;
+  &:hover,
+  &:focus {
+    opacity: 0;
   }
 }
 
