--- a/app/header.pug
+++ b/app/header.pug
@@ -65,12 +65,10 @@ header
           .profile__item User Profile
           .profile__item Contact Support
           .profile__item News
-      //- img(src="img/burger.svg", alt="Burger Menu").burger
-      .burger-menu
-        input(type="checkbox")#burger-menu__toggle
-        label(for="burger-menu__toggle").burger-menu__btn
-          span
+      img(src="img/burger.svg", alt="Burger Menu").burger
+.burger-menu
         nav.main-nav
+          img(src="img/burger-close.svg", alt="Burger Close").burger-menu__close
           ul.main-nav__list
             li
               a(href="#") News
