--- a/app/to-do.pug
+++ b/app/to-do.pug
@@ -5,6 +5,7 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title My To-Do List
     link(rel="stylesheet", href="css/style.min.css")
+    link(rel="stylesheet", href="css/to-do.min.css")
   body
     include header.pug
     .to-do-list
