--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -205,7 +205,7 @@ header {
         border: 1px solid $borderColor;
         box-sizing: border-box;
         border-radius: 15px;
-        width: 300px;
+        min-width: 300px;
         min-height: 100px;
         right: -28px;
         top: 57px;
