--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -828,6 +828,10 @@ header {
   }
 }
 
+button.mfp-close, button.mfp-arrow {
+  overflow: auto;
+}
+
 .popup-type {
   font-weight: bold;
   font-size: 18px;
@@ -871,6 +875,7 @@ header {
   height: 20px;
   top: -30px;
   opacity: 0;
+  pointer-events: none;
   &:hover,
   &:focus {
     opacity: 0;
