--- a/app/scss/to-do.scss
+++ b/app/scss/to-do.scss
@@ -43,6 +43,7 @@
       max-width: 560px;
       max-height: 222px;
       padding: 25px 30px 30px 30px;
+      width: 100%;
       cursor: pointer;
       .to-do-card__title {
         display: flex;
