--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -68,6 +68,40 @@ body {
   display: none;
 }
 
+// Index page
+
+.index-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  h1 {
+    text-align: center;
+    padding: 10px;
+    font-size: 30px;
+    line-height: 30px;
+  }
+  .html-pages {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 40px;
+  }
+  .html-pages__item {
+    border: solid 1px rgba(31, 32, 65, 0.25);
+    border-radius: 4px;
+    box-shadow: 0 0 10px rgba(31, 32, 65, 0.25);
+    padding: 10px;
+    flex-basis: 400px;
+    flex-grow: 1;
+    min-width: 250px;
+    height: fit-content;
+    img {
+      width: 100%;
+    }
+  }
+}
+
 // Burger Menu
 .burger-menu {
   display: none;
