changed body class on inex page

--- a/app/index.pug
+++ b/app/index.pug
@@ -6,12 +6,13 @@ html(lang="en")
     title Cal state East Bay
     link(rel="stylesheet" href="css/style.min.css")
     link(rel="icon" href="img/favicon.ico" type="image/x-icon")
-  body.index-body
-    h1.index-h1 Верстка страниц сайта университета
-    .html-pages
-      .html-pages__item
-        a(href="home.html")
-          img(src="img/home.JPG", alt="Home page")
-      .html-pages__item
-        a(href="to-do.html")
-          img(src="img/to-do.JPG", alt="To-do list page")
+  body
+    .index-body
+      h1.index-h1 Верстка страниц сайта университета
+      .html-pages
+        .html-pages__item
+          a(href="home.html")
+            img(src="img/home.JPG", alt="Home page")
+        .html-pages__item
+          a(href="to-do.html")
+            img(src="img/to-do.JPG", alt="To-do list page")
